--- a/layouts/partials/head/stylesheet.html
+++ b/layouts/partials/head/stylesheet.html
@@ -2,6 +2,7 @@
 
 <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 
+<link rel="stylesheet" href="{{ relURL "dist/css/main.css" }}">
 
 
 <noscript><style>img.lazyload { display: none; }</style></noscript>
